# vlan_sync

./: README.md  pyproject.toml  requirements.txt  vlan_sync.sqlite  vlan_sync_tool.py
etc/: config.py  db_ops.py  device_ops.py  inventory.py  logger_svc.py  ops.py  updater.py
tests/: test_vlan_sync.py
tests/unit/: test_ops.py
tests/unit/mock_data/: inventory.yml  mobileNOC-cfg.yml
